--- a/Accelerate-Precoursework/main.css
+++ b/Accelerate-Precoursework/main.css
@@ -26,6 +26,17 @@ html, body {
     margin: 0;
   }
 
+  hr {
+    height: 4px;
+    width: 70px;
+    text-align: center;
+    position: relative;
+    background: #7bc3d1;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    border: 0;
+  }
+
   .page-title {
     text-align: center;
     font-weight: 100;
@@ -70,7 +81,7 @@ html, body {
   .col-md-6 {
     margin: 30px 0;
   }
-  
+
   .btn.btn-primary {
     border-radius: 2px;
     border: 0px;
